--- a/index.css
+++ b/index.css
@@ -19,6 +19,11 @@ body {
     margin: 20px 80px;
 
 }
+
+table {
+    margin-left: auto;
+    margin-right:auto;
+}
 #familymember {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
