--- a/grids.css
+++ b/grids.css
@@ -25,3 +25,42 @@
     grid-row-start: 1;
     grid-row-end: 3;
   }
+.container {
+    display: grid;
+    max-width: 900px;
+    position: relative;
+    margin: auto;
+    grid-template-areas: "header header"
+                         "nav nav" 
+                         "info services"
+                         "footer footer";
+    grid-template-rows: 75px 30px 200px 30px;
+    grid-template-columns: 1fr 3fr;
+    gap: 5px; 
+    background-color: black;
+  }
+  
+  header {
+    grid-area: header;
+    background-color: dodgerblue;
+  } 
+  
+  nav {
+    grid-area: nav;
+    background-color: beige;
+  } 
+  
+  .info {
+    grid-area: info;
+    background-color: dodgerblue;
+  } 
+  
+  .services {
+    grid-area: services;
+    background-color: beige;
+  }
+  
+  footer {
+    grid-area: footer;
+    background-color: dodgerblue;
+  } 
